--- a/langs/fble.dataflow.txt
+++ b/langs/fble.dataflow.txt
@@ -189,4 +189,5 @@ computation, it's fine to make it slow.
 For the existing implementation of md5 to be made "high performance", the
 following would need to be changed:
 
+* Use of processes for padding.
 
