Implement FbleTypeCheck function separate from compiler.
Right now it's just a copy of the compiler with the bits not used for
typecheck removed. The type checking part hasn't been removed from the
compiler part yet either, so it's duplicated code. That will be cleaned up
shortly.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
 
 * Split compile into typecheck and codegen.
- - Pull type checking out into a separate function.
  - Pull type checking out into a separate file.
+ - Clean up typecheck.c and compile.c now that they are separate.
+   Pick better name for TypeCheckExprNoInstrs.
+ - Fix broken vacuous_value test.
 
 * [dataflow] Implement md5 using dataflow.
 
