--- a/langs/fble.dataflow.txt
+++ b/langs/fble.dataflow.txt
@@ -186,8 +186,6 @@ computation, it's fine to make it slow.
 
 ---
 
-For the existing implementation of md5 to be made "high performance", the
-following would need to be changed:
-
-* Use of processes for padding.
-
+For the existing implementation of md5 to be made "high performance", I think
+all we need is to figure out what to do about the use of processes for
+input and padding.
