--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 
 * Split compile into typecheck and codegen.
- - Pull type checking out into a separate file.
+ - Fix support for default case in select expressions.
  - Clean up typecheck.c and compile.c now that they are separate.
    Pick better name for TypeCheckExprNoInstrs.
  - Fix broken vacuous_value test.
 
-* [dataflow] Implement md5 using dataflow.
+* Add tests to increase code coverage.
 
 * Move implementations corresponding to fble-name.h to name.c?
 
@@ -23,7 +23,6 @@
 * [eval] Have option to turn off checking for nulls and other runtime errors?
 
 * Clean up how we track io activity?
-* Add tests to increase code coverage.
 
 * [profile] Remove special block 0
  - Add block data at the profile level representing 'total' and special case
