Fix support for default branches in union select.
typecheck now inserts NULL exprs where default branches should be taken.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 
 * Split compile into typecheck and codegen.
- - Fix support for default case in select expressions.
+ - Add regression test for failing default union select.
  - Clean up typecheck.c and compile.c now that they are separate.
    Pick better name for TypeCheckExprNoInstrs.
  - Fix broken vacuous_value test.
