--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,20 @@
 * Fix broken memory leak test.
  - looks like a false positive test failure.
 
-* Add tests to increase code coverage.
+* Remove unused 'sin' option from lexer.
+
+* Add test for AbortThread code coverage
+ Try to do all of the following things after an abort:
+ - tail call that isn't from main
+ - proc value
+ - put 
+ - link
+ - fork
+ - ref value
+ - return that isn't from main
+ - type instr
+* Add coverage for parse destructors
+ - names, module_ref, kinds, tagged_kinds, tagged_type, tagged_expr
 
 * Clean up typecheck.c and compile.c now that they are separate.
  - Pick better name for TypeCheckExprNoInstrs.
