WIP: Use different data structure for syntax and typecheck.
Because it's much cleaner that way than trying to reuse the same abstract
syntax tree as the input to typecheck and compilation. If a little more tedious.

The FbleTc data type has been defined, and compile.c rewritten to use it.
Still TODO:
* Figure out how to deal with captured scopes in compile.c
* Change it so all FbleTc have a loc instead of just some of them.
* Rewrite typecheck.c to emit FbleTc.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,13 @@
 
+* Figure out how to compile FUNC_VALUE_TC.
+ - Maybe associate a loc with every TC?
+* Figure out how to capture scope for EVAL, LINK, and EXEC TC in compile.
+
 * Move FblePrintName and FbleNamesEqual to fble-name.h?
 * Change ReportError to take %n as a value instead of a pointer?
+* Unify FbleVarIndex and FbleFrameIndex types?
+* Remove unused extra data in FbleExpr syntax after we split post-typechecked
+  information out.
 
 * Distinguish between FbleExpr and a new FbleTc IR.
 
