--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 * Fix broken vacuous_value test.
-* Fix broken memory leak test.
+* Fix broken memory leak tests.
  - looks like a false positive test failure.
+ - figure out how to make these not be flaky.
 
 * Add test for AbortThread code coverage
  Try to do all of the following things after an abort:
