--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,8 @@
+
+* Rename FbleRetainString/FbleReleaseString to FbleCopyString/FbleFreeString
+* Rename FbleRetainKind/FbleReleaseKind to FbleCopyKind/FbleFreeKind
+* Pass around FbleName* instead of FbleName.
+
 * Fix broken vacuous_value test.
 * Fix broken memory leak tests.
  - looks like a false positive test failure.
