Be more lenient of noise in memory tests.
In practice we were triggering a false positive on 620 byte noise out of 22187
bytes total, which is a little less than 3%. Increase the noise tolerance from
1% to 4% to avoid that false positive. That's well within the approximately 30%
growth we see for actual memory leaks.

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,7 @@
 * Pass around FbleName* instead of FbleName.
 
 * Fix broken vacuous_value test.
-* Fix broken memory leak tests.
- - looks like a false positive test failure.
- - figure out how to make these not be flaky.
+ - this should fall out after we pull out an FbleTc IR.
 
 * Add test for AbortThread code coverage
  Try to do all of the following things after an abort:
