Add support for FbleCopyName.
* Change name to store an FbleString instead of char* so we can reference count
  the string.
* Pass FbleName by value instead of by pointer in the few places it was passed
  by pointer.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
-* Pass around FbleName* instead of FbleName?
+* Move FblePrintName and FbleNamesEqual to fble-name.h?
+* Change ReportError to take %n as a value instead of a pointer?
 
 * Distinguish between FbleExpr and a new FbleTc IR.
 
