Rewrite typecheck.c for VAR_EXPR and MODULE_REF_EXPR.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 
-* Reimplement typecheck.c VAR_EXPR
+* Fix memory leak of FbleType in undefined-access test.
+* Reimplement typecheck.c
+ - FUNC_VALUE_EXPR
 * Produce list type as well as tc in NewListTc.
 * Rewrite typecheck.c to produce FbleTc.
 
