Fix memory leak in typecheck of ACCESS_EXPR.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 
-* Fix memory leak of FbleType in undefined-access test.
+* Fix undefined-access test.
 * Reimplement typecheck.c
  - FUNC_VALUE_EXPR
 * Produce list type as well as tc in NewListTc.
