Fix tracking of variable index when defining modules.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
 
 * Fix memory leak in 8.1-list/eval/strict.tcl test
-* Fix seg faults in 9.2-path/basic/absolute-child and friends.
- - Share scope between modules to ensure variable indices are tracked
-   properly.
 * Reimplement typecheck.c
  - FUNC_VALUE_EXPR
  - POLY_EXPR
@@ -11,6 +8,9 @@
 * Produce list type as well as tc in NewListTc.
 * Rewrite typecheck.c to produce FbleTc.
 * Rename POLY_EXPR to POLY_VALUE_EXPR?
+* Consistent use of '-' versus '_' in test names.
+* Add test for referring to a module from itself
+ - And figure out what the spec should be in that case.
 
 * Consistently document ownership of args to functions?
  Borrowed: no transfer of ownership.
