--- a/TODO.txt
+++ b/TODO.txt
@@ -18,12 +18,10 @@
 
 * Move FblePrintName and FbleNamesEqual to fble-name.h?
 * Change ReportError to take %n as a value instead of a pointer?
-* Unify FbleVarIndex and FbleFrameIndex types?
 * Should we remove FBLE_POLY_APPLY_TC? If not, should we restore FBLE_EVAL_TC?
   Should we remove FBLE_POLY_VALUE_TC and use FBLE_FUNC_APPLY instead?
 
-* Distinguish between FbleExpr and a new FbleTc IR.
-* Reorganize code in typecheck.c and compile.c to match enum definition order.
+* Reorganize code in compile.c to match enum definition order.
 
 * Fix broken vacuous_value test.
  - this should fall out after we pull out an FbleTc IR.
